force-app/main/default/objects/Repayment_Plan__c/Repayment_Plan__c.object-meta.xml
<CustomObject>
    <label>Repayment Plan</label>
    <nameField>
        <label>Repayment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repayment Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>