force-app/main/default/objects/Repayment_Plan__c/fields/Installment_Number__c.field-meta.xml
<CustomField>
    <fullName>Installment_Number__c</fullName>
    <label>Installment Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>