force-app/main/default/objects/Repayment_Plan__c/fields/Scheduled_Principal__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Principal__c</fullName>
    <label>Scheduled Principal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>