force-app/main/default/objects/Repayment_Plan__c/fields/Scheduled_Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Repayment_Date__c</fullName>
    <label>Scheduled Repayment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>